# New-Urk-City

./: README.md  SETUP.md  pyproject.toml
src/: agent_ecosystem.py  dashboard.py
src/new_urk_city/: __init__.py  __main__.py  system.py
tests/: test_system.py
